# cochleogram-vit

./: .gitignore  README.md  README_TRAIN.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: 01_preprocessing_exploration.ipynb  02_cochleogram_generation.ipynb  03_test_baselinecnn.ipynb  04_test_alexnet.ipynb  04_train_vit.ipynb
scripts/: evaluate.py  precompute_rgb.py  preprocess.py  train.py
src/cochleogram_vit/: __init__.py
src/cochleogram_vit/data/: dataset.py
src/cochleogram_vit/models/: alexnet.py  baseline_cnn.py  vit.py
src/cochleogram_vit/preprocessing/: cochleogram.py
src/cochleogram_vit/training/: metrics.py  trainer.py
src/cochleogram_vit/utils/: config.py
