[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cochleogram-vit"
version = "0.1.0"
description = "Transformer-Based Architecture Using Cochleograms for Abnormal Respiratory Sound Classification"
authors = [{ name = "Adem" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "vit-pytorch>=1.7.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "resampy>=0.4.2",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "h5py>=3.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipykernel>=6.25.0", "pytest>=7.4.0", "black>=23.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
